[gd_scene load_steps=5 format=2]

[ext_resource path="res://Professor/StatBoi.gd" type="Script" id=1]
[ext_resource path="res://Sprites/nutter/nutter-world.png" type="Texture" id=2]
[ext_resource path="res://Professor/ProfessorWorldObj.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.71434
height = 11.3634

[node name="ProfessorWorldObj" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StatBoi" type="Node2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerDetector" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, 1.12373 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
